package patterns;

public interface Observer {
    void update();
}